--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ header h1{
 	padding-left: .5em;
 	
 	}
-
+	
 nav ul{
 	margin:0;
 	padding:0;
@@ -42,15 +42,11 @@ nav ul li {
 nav ul li a {
 	display: block;
 	font-weight: bold;
-	padding: .625em 3.5em; /* 10px 15px */
+	padding: .625em 3em; /* 10px 15px */
 	text-decoration: none;
 	color: #000;
 	border-right: 1px solid #bababa;
 }
-nav ul li a:hover{
-	color: #FF0000;
-}
-
 
 
 img { max-width: 100% }
@@ -72,7 +68,20 @@ img { max-width: 100% }
 	width: 30%;
 	margin-top: 1em;	
 }
+#col4{
 
+	float: left; 
+	width: 60%;
+	margin-top: 1em;
+	margin-left: 3em;
+		
+}
+#col5{
+	float: right; 
+	width: 30%;
+	margin-top: 8em;
+	margin-left: auto;	
+}
 footer {
 		clear: both;
 }
